--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem Vindo!</h1>
+    <h4 class="display-6">Aqui Você Aluga os Melhores Veículos!</h4>
+
+    <div>
+        <img class="d-block w-100" src="~/img/carrosel/Nissan Silvia.jpg" alt="Primeira imagem" style="width: 100%; height: 500px; object-fit: cover;">
+    </div>
+
 </div>
