--- a/Views/Veiculos/Delete.cshtml
+++ b/Views/Veiculos/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que quer apagar?</h3>
 <div>
     <h4>Veiculo</h4>
     <hr />
@@ -64,6 +64,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="VeiculoId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volta Para a Lista Completa</a>
     </form>
 </div>
