--- a/Views/Veiculos/Details.cshtml
+++ b/Views/Veiculos/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Veiculo</h4>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.VeiculoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.VeiculoId">Editar</a> |
+    <a asp-action="Index">Voltar para Lista Completa</a>
 </div>
