--- a/Views/Veiculos/Index.cshtml
+++ b/Views/Veiculos/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Veiculos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar um novo</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.Disponibilidade)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.VeiculoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.VeiculoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.VeiculoId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.VeiculoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.VeiculoId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.VeiculoId">Apagar</a>
             </td>
         </tr>
 }
