Modificando alguns estilos e textos

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,4 +3,31 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum iaculis vulputate. 
+    Nam turpis nibh, vestibulum at mattis fringilla, tempus id magna. Aliquam quis neque erat. 
+    In a mi at est tincidunt aliquet non sit amet nunc. Aenean elementum porta faucibus. 
+    Phasellus lacus tortor, cursus non libero sed, cursus suscipit tellus. Suspendisse est lectus, ultrices ac sapien eu, sagittis pellentesque lectus. 
+    Fusce blandit tristique sapien sed pharetra. Donec posuere justo quis velit bibendum, et interdum magna aliquet. Suspendisse nisi velit, porta maximus commodo at, sodales in sem. 
+    Nullam tincidunt tincidunt mauris. Fusce quis sollicitudin urna. Cras fringilla vulputate velit, at accumsan turpis porta vulputate. Proin ac commodo mi. 
+    Curabitur imperdiet erat vitae tortor malesuada, quis posuere orci ullamcorper.
+
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus nisi nisi, sollicitudin nec scelerisque a, facilisis condimentum ante. 
+    Aenean mattis scelerisque erat, posuere commodo velit fermentum id. Aliquam felis justo, cursus in efficitur nec, congue in odio. Integer non odio lacinia, sollicitudin lacus at, sagittis ligula.
+    
+    Nam egestas eros ultrices tellus tincidunt vestibulum. 
+    Proin eget vestibulum lectus, at cursus lacus. Etiam ultrices nibh est, id viverra lacus ornare sit amet. Suspendisse sed tortor justo.
+
+    Mauris bibendum pharetra viverra. Pellentesque et tincidunt sapien.
+    Aenean ut pretium diam, eget tincidunt orci. Praesent pretium, tellus id rhoncus tincidunt, quam diam maximus lacus, id imperdiet odio nunc varius sapien. 
+    Nulla mauris tortor, varius id metus at, faucibus tempor turpis. Duis et tincidunt mauris. Maecenas vitae augue et urna tempus faucibus at ac arcu. Nullam in nunc at diam pretium ornare.
+
+    Nulla mattis libero neque, porttitor laoreet massa elementum egestas. 
+    Suspendisse non auctor sapien, ac suscipit erat. Suspendisse imperdiet laoreet sapien, vitae tempus dolor efficitur ut. Vestibulum ac dui vel tellus ullamcorper semper. 
+    Cras eget aliquet leo, id sagittis turpis. Suspendisse neque orci, lobortis ut lacus nec, imperdiet condimentum nisi. Ut sit amet malesuada erat, id lacinia nisi. 
+    Curabitur venenatis lorem urna, sit amet consectetur lacus malesuada in.
+
+    Sed at justo vel urna fermentum vestibulum. Quisque volutpat laoreet neque tempus ultricies. Nullam lorem ipsum, pellentesque ut porttitor id, ultrices vitae purus. 
+    Suspendisse at ligula vel enim gravida facilisis. Curabitur euismod sodales odio ac consectetur. Proin suscipit cursus gravida. Sed iaculis mollis eros ac sollicitudin. 
+    Integer sollicitudin odio sit amet nisl dignissim, et elementum nulla rhoncus. Praesent bibendum porta velit, ut tincidunt nisl interdum eget. Aenean condimentum aliquet sodales.
+</p>
