--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,11 @@
     <h4 class="display-6">Aqui Você Aluga os Melhores Veículos!</h4>
 
     <div>
-        <img class="d-block w-100" src="~/img/carrosel/Nissan Silvia.jpg" alt="Primeira imagem" style="width: 100%; height: 500px; object-fit: cover;">
+        <img class="d-block w-100" src="~/img/background/R33-capa.jpg" alt="Primeira imagem"
+             style="width: 100vw; height: 100vh; object-fit: cover; ">
+        <br/>
+        <a type="button" class="btn btn-primary" asp-controller="Veiculos" asp-action="Index">Clique Aqui para ver os Veículos Disponíveis</a>
+
     </div>
 
 </div>
